# openpoiservice

./: .dockerignore  .flaskenv  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  categories_docker.yml  config.py  config_flask.py  docker-compose-rebuild.yml  docker-compose-standalone.yml  docker-compose-with-postgis-rebuild.yml  docker-compose-with-postgis.yml  docker-compose.yml  gunicorn_config.py  manage.py  misc.sql  ops_settings_docker.yml  ops_settings_docker_standalone.yml  osmconvert  pyproject.toml  requirements.txt  run.sh  setup.py  test_poly.poly  tox.ini  wsgi.py
.github/workflows/: run_tests.yml
conf/: config.template.yml  config_flask.py  config_gunicorn.py
openpoiservice/: __init__.py  logger.py  models.py  ops_settings.yml
openpoiservice/api/: api_exceptions.py  query_builder.py  query_info.py  routes.py  schemas.py  views.py
openpoiservice/db_import/: models.py  osm_reader.py  parser.py
ops_sanity/: bbox_polygon.dbf  bbox_polygon.shp  bbox_polygon.shx  berlin_poly.dbf  berlin_poly.shp  berlin_poly.shx  linestring_bremen_city_test.shp  linestring_bremen_city_test.shx  ops.qgs  ops.qgs~  point_bremen_city_test.shp  point_bremen_city_test.shx  poly_buffer_1.dbf  poly_buffer_1.shp  poly_buffer_1.shx  polygon_bremen_city_test.dbf  polygon_bremen_city_test.shp  polygon_bremen_city_test.shx
osm/: GeoFabrikSpider.py  bremen-tests.osm.pbf  dl_pbf.sh  download.py  pbf_list.txt  scrape_geofabrik.py
osm_test/: bremen-tests-mod.osm.pbf
tests/: base.py  test-pbf-processor.py  test_category_list.py  test_list.py  test_pois.py  test_stats.py
(+48 files in other folders)
