[tool.poetry]
name = "openpoiservice"
version = "0.1.0"
description = "POI service consuming OpenStreetMap data"
authors = [
    "Timothy Ellersiek <timothy@openrouteservice.org>",
    "Nils Nolde <nils@openrouteservice.org>"
]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.5"
Flask = "^1.1"
Flask-SQLAlchemy = "^2.3"
Flask-Testing = "^0.6"
psycopg2-binary = "^2.8"
PyYAML = "^5.3"
GeoAlchemy2 = "^0.6"
voluptuous = "^0.11"
geojson = "^2.5"
shapely = "^1.7"
flasgger = "^0.9"
pyproj = "^2.5"
scrapy = "^1.5"
gunicorn = "^20.0"
flask-cors = "^3.0"
osmium = "^2.15"
# Pin werkzeug version until bug is fixed
werkzeug = "0.16.1"

[tool.poetry.dev-dependencies]
coverage = "^5.0"
tox = "^3.14.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
